--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E'Ricochet</title>
+    <title>Robo-Casse-Tête</title>
     <style>
         /* Improvement 3: CSS Variables */
         :root {
@@ -265,7 +265,7 @@
     </style>
 </head>
 <body>
-    <h1>E'Ricochet</h1>
+    <h1>Robo-Casse-Tête</h1>
 
     <div id="game-container"></div>
 
@@ -307,7 +307,7 @@
     <div id="help-modal" class="modal">
         <div class="modal-content">
             <span class="close-button" onclick="closeHelpModal()" aria-label="Fermer l'aide">×</span>
-            <h2>Aide E'Ricochet</h2>
+            <h2>Aide Robo-Casse-Tête</h2>
             <p><strong>MODE ÉDITION (Bordure Jaune):</strong><br>
                - Cliquez près des bords internes d’une case pour ajouter ou enlever un mur (zone sensible d'environ 10 pixels).<br>
                - Les murs extérieurs, centraux, près des coins et les 8 murs fixes perpendiculaires aux bords ne sont pas modifiables.<br>
